--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,6 @@
 # Production Environment Variables
-VITE_API_URL=https://courier-tracking-system-nkdz.onrender.com/api
+VITE_API_BASE_URL=https://courier-tracking-system-nkdz.onrender.com/api
 VITE_SOCKET_URL=https://courier-tracking-system-nkdz.onrender.com
+
+# Google Maps API Key (leave empty for now)
+VITE_GOOGLE_MAPS_API_KEY=
