--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,15 @@
 {
   "version": 2,
+  "env": {
+    "VITE_API_BASE_URL": "https://courier-tracking-system-nkdz.onrender.com/api",
+    "VITE_SOCKET_URL": "https://courier-tracking-system-nkdz.onrender.com"
+  },
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": "https://courier-tracking-system-nkdz.onrender.com/api",
+      "VITE_SOCKET_URL": "https://courier-tracking-system-nkdz.onrender.com"
+    }
+  },
   "builds": [
     {
       "src": "package.json",
